--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
-TITLE = 'Azure Voting App Yahaha'
+TITLE = 'Azure Voting App Pembohonk Publik'
 VOTE1VALUE = 'Bluee'
 VOTE2VALUE = 'Purplee'
 SHOWHOST = 'false'
